FBINTF Change Log  version          (1.1-4 Build 11515)  Fri, 28 Dec 2018 10:04:19 +0000

1. Fix a problem with the SQL parameter parser that failed to recognise parameters
   where the second character of the parameter name is a numeric.

2. New method for IAttachment: procedure getFBVersion(version: TStrings);
   This returns the isc_version connection information as one or more lines.
   This is the same information as returned by isql with the -z option.

3. If -dFIREBIRD3APIONLY is used as a compiler option then the legacy Firebird API
   is no longer compiled in. Likewise, if -dLEGACYFIREBIRDAPIONLY is used as a
   compiler option then the Firebird 3 API is no longer compiled in.

4. IColumnMetaData: new method.

   TIBDateTimeFormats = (dfTimestamp, {SQL TIMESTAMP}
                        dfDateTime,   {SQL DATETIME}
                        dfTime);

   function GetDateTimeStrLength(DateTimeFormat: TIBDateTimeFormats): integer;

   This returns the max. number of characters returned by the "AsString" method
   when the SQL type of the column is respectively TIMESTAMP, DATETIME or TIME.

5. Additional argument for IAttachment.PrepareWithNamedParameters -
     CaseSensitiveParams: boolean = false

   If this argument is set to true then SQL parameter names are assumed to be case
   sensitive and must be referenced (using ISQLParams.ByName) using the case
   sensitive name.

6. Bug fix: when setting a query parameter, it is now possible, when the parameter
   is of type VarChar or Char to set the parameter to a numeric value (e.g. using
   .AsCurrency) and then subsequently to update the value to a non-numeric string
   using .AsString.



FBINTF Change Log  version                  (1.1-3) Wed, 05 Dec 2018 14:28:10 +0000

1. DARWIN only syntax error: fix missing semi-colon in TFBClientAPI.LoadIBLibrary

2. Restrict IsMultiThread check to Unix only for compatibility with
   https://bugs.freepascal.org/view.php?id=30535
