@@ -1,3 +1,8 @@
+FBINTF Change Log  version          (1.1-5 Build 11515)  Fri, 28 Dec 2018 10:04:19 +0000
+
+1. ISQLParams.GetHasCaseSensitiveParams added. Returns true if param names are
+   case sensitive
+
 FBINTF Change Log  version          (1.1-4 Build 11515)  Fri, 28 Dec 2018 10:04:19 +0000
 
 1. Fix a problem with the SQL parameter parser that failed to recognise parameters
